# BinSurvival

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: Torch_Cox_Multi_package_test.ipynb  Torch_Cox_package_test.ipynb  cross_val_torch_cox.py
src/coxbin/: README.md  TorchCox.py  TorchCoxMulti.py  __init__.py  eval_survival.py  evaluate_sim.py  requirements.txt
src/coxbin/models/: logreg.py  torchcox.py  torchcox_multi.py
src/coxbin/notebook/: Torch_Cox_Multi_eval.ipynb  cross_val_torch_cox.py
src/coxbin/torchcox/: TorchCoxMulti.py
tests/: conftest.py  test_eval_survival.py  test_torchcox.py  test_torchcox_multi.py  test_torchcoxmulti.py
