[project]
name = "coxbin"
version = "0.1.0"
description = "Left-censored extension of deep survival models, implemented by extending TorchCox"
readme = "README.md"
authors = [
    { name = "Benjamin Goudey", email = "ben.goudey@unimelb.edu.au" }
]
requires-python = ">=3.11"
dependencies = [
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "autograd==1.7.0",
    "autograd-gamma==0.5.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fastjsonschema==2.20.0",
    "filelock==3.16.1",
    "fonttools==4.54.1",
    "formulaic==1.0.2",
    "fsspec==2024.9.0",
    "idna==3.10",
    "interface-meta==1.3.0",
    "ipykernel==6.29.5",
    "ipython==8.12.3",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-pygments==0.3.0",
    "kiwisolver==1.4.7",
    "lifelines==0.29.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mistune==3.0.2",
    "mpmath==1.3.0",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.6.68",
    "nvidia-nvtx-cu12==12.1.105",
    "packaging==24.1",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pipreqs==0.5.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.47",
    "psutil==6.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.18.0",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.20.0",
    "rpy2==3.5.16",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "six==1.16.0",
    "skorch==1.0.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tabulate==0.9.0",
    "threadpoolctl==3.5.0",
    "tinycss2==1.3.0",
    "torch==2.4.1",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "triton==3.0.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "wrapt==1.16.0",
    "yarg==0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

